--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -9,10 +9,8 @@
   position: relative;
   overflow: hidden;
   min-height: calc(100vh - var(--ifm-navbar-height) * 2);
-  background-image: url('https://experiments.sparanoid.net/i0.wp.com/sparanoid.blog/wp-content/uploads/2021/10/yEt6JSa.gif');
-  // background-image: url('https://i.imgur.com/FvqR9KL.gif?noredirect');
+  background: url('/img/pattern.png') no-repeat right bottom, linear-gradient(141.15deg, rgba(0, 0, 0, 0.5) 1.1%, #008DD2 99.38%), #252D5A;
   background-size: cover;
-  background-position: center;
 
   &::after {
     position: absolute;
@@ -21,7 +19,7 @@
     right: 0;
     bottom: 0;
     content: ' ';
-    background-color: var(--link-color-20);
+    background-color: var(--link-color-10);
   }
 
   :global .container {
@@ -34,18 +32,5 @@
     @media screen and (max-width: 966px) {
       font-size: 2.5rem;
     }
-  }
-}
-
-.credit {
-  position: absolute;
-  bottom: 1rem;
-  right: 1rem;
-  margin: 0;
-  font-size: .8rem;
-  color: var(--white-80);
-
-  a {
-    color: var(--white);
   }
 }
